sf-to-gcp-pubsub/force-app/main/default/objects/IntegrationPlatformEvent__e/IntegrationPlatformEvent__e.object-meta.xml
<CustomObject>
    <label>IntegrationPlatformEvent</label>
    <pluralLabel>IntegrationPlatformEvents</pluralLabel>
</CustomObject>