sf-to-gcp-pubsub/force-app/main/default/objects/IntegrationPlatformEvent__e/fields/IntegrationEventName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationEventName__c</fullName>
    <label>IntegrationEventName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>