sf-to-gcp-pubsub/force-app/main/default/objects/IntegrationPlatformEvent__e/fields/IntegrationName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationName__c</fullName>
    <label>IntegrationName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>