sf-to-gcp-pubsub/force-app/main/default/objects/IntegrationPlatformEvent__e/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>StatusCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>